--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@capacitor/android": "^5.7.3",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "5.7.3",
     "@capacitor/haptics": "5.0.7",
